# gladius

./: Cargo.toml  build.rs
doc/: TODO.md
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: main.rs  render_gl.rs  resources.rs  triangle.rs  triangle.vert
src/render_gl/: buffer.rs  data.rs  mod.rs  shader.rs
