[package]
name = "gladius"
version = "0.1.0"
authors = ["Spiros Makris <makris.spiros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
sdl2 = "0.34.2"
gl = { path = "lib/gl" }

[build-dependencies]
walkdir = "2.3"

[features]
gl_debug = ["gl/debug"]
